JSW Devsb/src/objects/Order_Booking_Information__c.object
<CustomObject>
    <fields>
        <fullName>Account_Owner_Email__c</fullName>
        <label>Account Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order booking Information</relationshipLabel>
        <relationshipName>Order_booking_Information</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <formula>IF( $Profile.Name =&apos;JSW Customer&apos;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delivery_Address__c</fullName>
        <label>Delivery Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoterm__c</fullName>
        <label>Incoterm</label>
        <picklist>
            <picklistValues>
                <fullName>FOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EX</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Material_Packing_Type__c</fullName>
        <label>Material</label>
        <picklist>
            <picklistValues>
                <fullName>PSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concreel HD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPC</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Packing_Type__c</fullName>
        <label>Packing Type</label>
        <picklist>
            <picklistValues>
                <fullName>LOOSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1S LPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2S LPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDPE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PP</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quantity_in_MT__c</fullName>
        <label>Quantity in MT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_Email__c</fullName>
        <formula>Account__r.Owner.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SO Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToparty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To Party</label>
        <referenceTo>Ship_To_Party__c</referenceTo>
        <relationshipLabel>Order booking Information</relationshipLabel>
        <relationshipName>Order_booking_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_to_location__c</fullName>
        <label>Ship to location</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Dealer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Dealer Name</label>
        <referenceTo>Business_Partner__c</referenceTo>
        <relationshipLabel>Order booking Information</relationshipLabel>
        <relationshipName>Order_booking_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Order Booking Information</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Last_15_days_Order_Booking</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Delivery_Address__c</columns>
        <columns>Incoterm__c</columns>
        <columns>Material_Packing_Type__c</columns>
        <columns>Quantity_in_MT__c</columns>
        <columns>Sub_Dealer_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:15</value>
        </filters>
        <label>Last 15 days Order Booking</label>
    </listViews>
    <listViews>
        <fullName>Last_30_days_Order_Booking</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Delivery_Address__c</columns>
        <columns>Incoterm__c</columns>
        <columns>Material_Packing_Type__c</columns>
        <columns>Quantity_in_MT__c</columns>
        <columns>Ship_to_location__c</columns>
        <columns>Sub_Dealer_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Last 30 days Order Booking</label>
    </listViews>
    <listViews>
        <fullName>Last_7_days_Order_Booking</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Sub_Dealer_Name__c</columns>
        <columns>Incoterm__c</columns>
        <columns>Delivery_Address__c</columns>
        <columns>Quantity_in_MT__c</columns>
        <columns>Material_Packing_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Last 7 days Order Booking</label>
    </listViews>
    <nameField>
        <displayFormat>OBI-{00000}</displayFormat>
        <label>Order Booking Information  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order booking Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>